# brisvia-desktop

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  owner-approval-v1.0.9.json  owner-approval-v1.1.0.json  package-lock.json  package.json  playwright.config.js  release-go-v1.0.9.json  release-go-v1.1.0.json  test_locales.cjs  wdio.conf.js
.github/workflows/: build-linux.yml  build-macos.yml  build-miner-cli.yml  build-windows.yml  e2e.yml  guard-no-automated-coauthors.yml  linux-appimage-ubuntu2604.yml  publish-approved-release.yml  publish-manifest.yml  smoke-deb-cli-linux.yml  test-installer-scenarios.yml  tests.yml  validate-windows-fix.yml  verify-candidate.yml  verify-update.yml
crates/brisvia-randomx/: .gitignore  Cargo.toml  build.rs  share_rule_vectors.json
crates/brisvia-randomx/src/: blockhdr.rs  lib.rs  pool_miner.rs  pool_worker.rs  stratum.rs  worksource.rs
patches/: @wdio+tauri-service+1.2.0.patch
scripts/: publish-fixed-name-win.ps1  sign-wrapper.ps1
src-tauri/: Cargo.toml  installer-hooks.nsh  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/windows/: installer-hooks.nsh  shutdown-brisvia-node.ps1
src/renderer/: app.js  i18n.js  index.html  locales.js  styles.css  tauri-bridge.js
tests/: amount-separator.test.js  run-rust-tests.js
tests/e2e/: auto-start.spec.js  boot.spec.js  capturas.spec.js  fixtures.js  gate-regressions.spec.js  mining-mode.spec.js  share.spec.js  static-server.js  wait-mode.spec.js  wallet-create.spec.js  wallet-node-independence.spec.js
tests/e2e-real/: build-e2e-binaries.js  run.js
tests/e2e-real/helpers/: harness.js
tests/e2e-real/migration/: prepare.spec.js  verify.spec.js
tests/e2e-real/specs/: 01-apertura.spec.js  01-first-launch.spec.js  02-crear-billetera.spec.js  02-create-wallet.spec.js  03a-modo-espera-antes.spec.js  03a-wait-mode-before.spec.js  03b-modo-espera-despues.spec.js  03b-wait-mode-after.spec.js  04-nodo-regtest.spec.js  04-regtest-node.spec.js  05-minado.spec.js  05-mining.spec.js  06-cierre-recuperacion.spec.js  06-close-recovery.spec.js  07-restaurar.spec.js  07-restore-wallet.spec.js  08-backup-receive.spec.js  08-backup-recibir.spec.js  09-contrasena-incorrecta.spec.js  09-wrong-password.spec.js  10-enviar.spec.js  10-send.spec.js  11-idioma.spec.js  11-language.spec.js  12-configuracion.spec.js  12-settings.spec.js  13-reentry.spec.js  13-reingreso.spec.js  14-transaction.spec.js  15-language-dynamic.spec.js  16-intensity-propagation.spec.js
tools/: check_english_only.py  check_error_contract.py  check_error_sweep.py  check_no_internal_docs.py  check_portable.py  check_release_identity.py  check_textos.py  check_updater.py  check_web_hashes.py  make_latest_json.py  run_tests_verified.py  verify_updater_signature.py
tools/ci/: Get-BuiltArtifact.ps1  Invoke-NativeProcess.ps1  Test-DiagnosticPreflight.ps1  Test-WorkflowPowerShell.ps1  check_imports_deep.py  check_test_exe_imports.py  derive_scenario_workflow.py  derive_validation_workflow.py  run-shutdown-scenario.ps1
