[package]
name = "brisvia-miner"
version = "1.0.6"
description = "Brisvia (BRVA) desktop miner"
authors = ["Brisvia"]
edition = "2021"

[lib]
name = "brisvia_miner_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
# Build the app against the real network (mainnet). Without this flag the app targets
# the shared test network (testnet). Only three network constants differ between builds.
mainnet = []
# Test-only build for the real end-to-end suite (layers 3 and 4). NEVER shipped in the public binary.
# It unlocks a handful of env-var hooks used ONLY by the automated tests:
#   - BRISVIA_E2E_CHAIN / BRISVIA_E2E_SUBDIR: point the node at an isolated regtest chain.
#   - BRISVIA_E2E_NOW: freeze the webview clock (Date.now) to test the pre-launch wait mode.
# Without this feature the code compiles those hooks out entirely, so production behaviour is untouched.
e2e = []

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Lightweight HTTP client for the local JSON-RPC with bitcoind (localhost, no TLS -> fewer deps and simple cross-compile).
ureq = { version = "2", default-features = false, features = ["json"] }
# BIP39 (12 words) + BIP32 (derivation) for real wallet backup.
bip39 = { version = "2", features = ["rand"] }
bitcoin = "0.32"
zeroize = "1"
# Password-based encryption of the recovery phrase: Argon2id key derivation + AES-256-GCM.
argon2 = "0.5"
aes-gcm = "0.10"
rand = "0.8"
# Operating system language (to pick es/en on first run).
sys-locale = "0.3"
# Start with the system (opt-in from Settings).
tauri-plugin-autostart = "2"
# Single instance: prevents opening two windows (and two mining engines) if the program is launched while already open.
tauri-plugin-single-instance = "2"
# Self-updater: lets an installed copy update itself (so users don't re-download when real mining starts). Signed with minisign.
tauri-plugin-updater = "2"
