[package]
name = "brisvia-randomx"
version = "0.1.0"
edition = "2021"
description = "Rust bindings to RandomX v1.2.2 for the Brisvia miner (consistent with the node)."

[lib]
name = "brisvia_randomx"
path = "src/lib.rs"

# Minimal validation miner: getblocktemplate -> build block -> mine -> submitblock.
[[bin]]
name = "mine-once"
path = "src/bin/mine_once.rs"

[dependencies]
ureq = { version = "2", default-features = false, features = ["json"] }
serde_json = "1"
bitcoin = { version = "0.32", features = ["serde"] }
hex = "0.4"
