[package]
name = "brisvia-randomx"
version = "0.1.0"
edition = "2021"
description = "Rust bindings to RandomX v1.2.2 for the Brisvia miner (consistent with the node)."

[lib]
name = "brisvia_randomx"
path = "src/lib.rs"

# Minimal validation miner: getblocktemplate -> build block -> mine -> submitblock.
[[bin]]
name = "mine-once"
path = "src/bin/mine_once.rs"

# Manual check of the encrypted path against the REAL pool. Not run in CI: it needs the internet and a live pool.
[[bin]]
name = "pool-tls-check"
path = "src/bin/pool_tls_check.rs"

[dependencies]
ureq = { version = "2", default-features = false, features = ["json"] }
serde_json = "1"
bitcoin = { version = "0.32", features = ["serde"] }
hex = "0.4"
# TLS for the stratum link. Without encryption, the conversation with the pool travels in the clear and a
# man in the middle can change the miner's payout address: people mine and someone else gets paid. rustls is
# already in the dependency tree (the updater uses it), so it adds no real weight to the program. webpki-roots
# ships the embedded root certificates: same behavior on Windows, Linux and Mac, without depending on the system.
rustls = "0.23"
webpki-roots = "0.26"
